<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id= "@+id/layout_comments"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/comments_read_feed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/comments_add_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/comments_block_navigate_back"
            android:layout_width="match_parent"
            android:clickable = "true"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="10"
            tools:ignore="MissingConstraints">

            <ImageView
                 android:layout_height="match_parent"
                 android:layout_width="20dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:src="@drawable/ic_back_arrow"
                android:contentDescription="@string/return_image" />

            <TextView
                style="@style/comments_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/comments" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comments_feed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="80dp"
            ></androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/comments_add_block"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/comments_read_feed"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="10">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_comments_avatar"
            android:layout_width="50dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_photo_temp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/CornerSize50Percent"
            android:contentDescription="@string/TODO" />
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="8"
            android:weightSum="10"
            android:orientation="horizontal"
            android:background="@drawable/roundimage">
            <TextView
                android:id="@+id/plain_text_input"
                android:layout_height="50dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_weight="9"
                android:singleLine="true"
                android:focusable="true"
                android:clickable="true"
                android:text="Добавьте комментарий..."
                tools:ignore="Deprecated,NestedWeights" />
            <TextView
                android:layout_width="140dp"
                android:text="Опубликовать"
                style="@style/comments_publish"
                android:background="@drawable/no_border_button"
                android:layout_marginEnd="2dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="50dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1">

            </TextView>



        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>